data/all_generated_tests/raw_wast_tests/br_if_IncorrectHandlingofControlFlowAcrossModuleBoundaries_1991.wast
;; 2. **Test: Using `br_if` in Loops Within Imported Functions**    - **Constraint Checked:** Validate that `br_if` correctly handles backward branches within an imported function's loop.    - **Description:** Import a function containing a loop with a `br_if` for conditional iteration. Call this function, ensuring it correctly loops back on condition and maintains execution state in the caller module without stack corruption.

(assert_invalid
  (module
    (import "env" "func_with_loop" (func $func_with_loop (param i32)))
    (func (call $func_with_loop (i32.const 1)))
  )
  "imported function br_if loop validation"
)